bzr-svn 0.5.3                   UNRELEASED

  BUG FIXES

   * Lazily load commands during help. (#330928)

   * Fix one-line helps for dpush / foreign-mapping-upgrade. (#331051)

   * Skip unicode tests if the local file system doesn't support unicode 
     paths.

   * Don't print traceback when connection errors occur during push. (#331078)

bzr-svn 0.5.2					2009-02-18

  BUG FIXES

   * Fix installation of cache module.

bzr-svn 0.5.1					2009-02-17

  BUG FIXES

   * Fix parsing of "trunk/tags" style filenames in trunk repository layout 
     handling. (#324970)

   * "bzr push" now also works when creating new branches. "bzr svn-push" 
     has been removed. This requires a patched version of bzr. (#127945)

   * Fixed memory usage and performance bug while iterating over a repository.
     (#318993)

   * When following prefixes, cope with branches copied from outside of the 
     prefix. (#325428)

   * Handle non-mainline history a bit better in dpush. (#329284)

   * Assume that ERR_XML_MALFORMED only occurs for non-Subversion 
     URLs. (#327287)

   * Only upgrade tags for which the revision they point to has been 
     upgraded in svn-upgrade.

   * Fix handling of "unusual" branch paths in sparse logs. (#325727)

  FEATURES

   * Set svn:original-date property when revision properties can be committed.

   * Add transport speed progress indication. (require subvertpy >= 0.6.4)

  PERFORMANCE

   * New cache that stores the most important metadata information used 
     when browsing history. 

   * More efficient pull from Subversion branches, avoiding unnecessary 
     calculation of revision numbers. (Requires InterBranch patch to bzr)

   * More efficient pull from Subversion branches, by using the local 
     branch ancestry to find out tag revision ids rather than the remote 
	 Subversion branch.

   * Use VersionedFiles.insert_record_stream() rather than 
     VersionedFiles.add_lines(), should be slightly faster.
 